used vw instead of % on category box also aspect ratio to see if it stops the shift

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -848,6 +848,7 @@ nav ul li :hover {
   flex-direction: column;
   width: 100%;
   max-width: 100vw;
+  min-height: 10vw;
   height: auto;
   padding: 6vw;
   margin: 0 auto;
@@ -1998,6 +1999,7 @@ button.btn5:hover {
 
   .categories-box {
     margin: 1em auto;
+    max-width: 40vw;
     width: 100%;
     height: auto;
     padding: 0;
@@ -2008,6 +2010,7 @@ button.btn5:hover {
     height: auto;
     margin: 0 auto;
     object-fit: cover;
+    aspect-ratio: 1.79;
   }
 
   .home-btn {
